Draggable/Droppable flow active

--- a/public/index.html
+++ b/public/index.html
@@ -12,4 +12,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js" type="text/babel"></script>
 </html>
